--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@google-cloud/pubsub": "^1.2.0",
     "@google-cloud/storage": "^4.2.0",
     "@nestjs/common": "^6.7.2",
     "@nestjs/core": "^6.7.2",
